random button working

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1>Wikipedia Viewer</h1>
 
       <div class="viewer-search">
-        <button disabled="true" type="button" name="button"> <i class="fa fa-random"></i></button>
+        <button id="random" type="button" name="button"> <i class="fa fa-random"></i></button>
         <input id="input" type="text" name="search" placeholder="Search on Wikipedia" />
         <button id="search" type="button" name="button"> <i class="fa fa-search"></i></button>
       </div>
